--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "flyonui": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-hot-toast": "^2.5.1",
+    "react-router-dom": "^7.1.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
